--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <declare-styleable name="VoiceLoadingView">
-        <attr name="vlv_bg_color" format="color"></attr>
+    <declare-styleable name="VoicePlayView">
+        <attr name="lineCount" format="integer" />
+        <attr name="lineColor" format="color" />
+        <attr name="lineWidth" format="dimension" />
     </declare-styleable>
 </resources>
