--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="black_1a">#FF1A1A1A</color>
     <color name="yellow_FFE1B24A">#FFE1B24A</color>
     <color name="gray_d8">#d8d8d8</color>
+    <color name="yellow">#F2E9D8</color>
 </resources>
