--- a/app/src/main/res/layout/record_voice_layout.xml
+++ b/app/src/main/res/layout/record_voice_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#FFF7F7F7"
+    android:background="@color/gray_d8"
     android:gravity="center"
     android:orientation="vertical"
     android:layout_width="match_parent"
