--- a/app/src/main/res/layout/activity_record_voice_demo.xml
+++ b/app/src/main/res/layout/activity_record_voice_demo.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/playStatusText"
-        android:text="Hello~"
+        android:text="@string/hello"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
